--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>recipe-hub-collab-cook</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Recipe Hub – Collab Cook</title>
+    <meta name="description" content="A collaborative recipe sharing platform." />
+    <meta name="author" content="Your Name" />
 
-    <meta property="og:title" content="recipe-hub-collab-cook" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Recipe Hub – Collab Cook" />
+    <meta property="og:description" content="A collaborative recipe sharing platform." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://fanckbxnbxidcdleenpw.supabase.co/storage/v1/object/public/recipe-media//shareimageof%20recipe.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+    <meta name="twitter:image" content="https://fanckbxnbxidcdleenpw.supabase.co/storage/v1/object/public/recipe-media//shareimageof%20recipe.png" />
   </head>
 
   <body>
